--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1 class="cover_text"><b>Welcome to<br><large><i style="color: white"> "My Christian Life"</i></large><br>webpage</b></h1>
 			</div><br><br>
 
-				<a href="form.html"><button class="button_cover"><p style="color: black"><b>login</b></p></button></a>
+				<a href="home.html"><button class="button_cover"><p style="color: black"><b>NEXT</b></p></button></a>
 			</center>
 			</div>
 			</div>
