--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="home.html"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 				<li><a href="#">Profile</a></li>
-				<li><a href="Messages.html">Messages <span class="glyphicon glyphicon-film"></span> </a></li>
+				<li><a href="#">Messages <span class="glyphicon glyphicon-film"></span> </a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Contacts <span class="glyphicon glyphicon-phone-alt"></span></a></li>
