--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 			</div>
 			</div>
-			<div style="text-align: left;"><small>@powered by loydeacheivement</small></div>
+			<div style="text-align: left; color: white"><small>@powered by loydeacheivement</small></div>
 
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
