--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			</center>
 			</div>
 			</div>
-			</div>
-			<div style="text-align: left; color: white"><small>@powered by loydeacheivement</small></div>
+			</div><br><br>
+			<div style="text-align: right;"><small>@powered by loydeacheivement</small></div>
 
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
