--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 			</div>
 			</div><br><br>
-			<center><div><small>@powered by loydeacheivement</small></div></center>
+			<center><div><small>---------------@powered by loydeacheivement---------------</small></div></center>
 
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
