--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			</center>
 			</div>
 			</div>
-			</div><br><br>
-			<center><div><small>---------------@powered by loydeacheivement---------------</small></div></center>
+			</div>
+			<center><div>---------------@powerd by loydeacheivement---------------</div></center>
 
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
