--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="home.html"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 				<li><a href="#">Profile</a></li>
-				<li><a href="#">Messages <span class="glyphicon glyphicon-film"></span> </a></li>
+				<li><a href="Messages.html">Messages <span class="glyphicon glyphicon-film"></span> </a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Contacts <span class="glyphicon glyphicon-phone-alt"></span></a></li>
@@ -38,7 +38,7 @@
 	</div>
 	</nav>
 
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row">
 			  <div class="col-md-12">
 			  	<div class="bs-example">
@@ -54,15 +54,15 @@
 			  		<!-- wrapper for carousel items-->
 			  		<div class="carousel-inner">
 			  			<div class="item active">
-			  				<img src="img/img1.jpg" width="300px" alt="first Slide">
+			  				<img src="img/img1.jpg" width="400px" alt="first Slide">
 			  			</div>
 
 			  			<div class="item">
-			  				<img src="img/img2.jpg" width="500px" alt="second Slide">
+			  				<img src="img/img2.jpg" width="400px" alt="second Slide">
 			  			</div>
 
 			  			<div class="item">
-			  				<img src="img/img3.jpg" width="300px" alt="third Slide">
+			  				<img src="img/img3.jpg" width="200px" alt="third Slide">
 			  			</div>
 			  		</div>
 
@@ -147,7 +147,7 @@ your programs, too.
 		 	 		$("#myCarousel").carousel(
 		 	 		{
 		 	 		interval: 5000,
-		 	 		pause: false
+		 	 		pause: false,
 		 	 	});
 				});
 		 	 </script>
