--- a/home.html
+++ b/home.html
@@ -31,7 +31,6 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Contacts <span class="glyphicon glyphicon-phone-alt"></span></a></li>
-				<li><a href="index.html">logout</span></a></li>
 			</ul>
 		</div>
 		</div>
@@ -77,59 +76,16 @@
 			</div >
 		</div >
 
-		<div class="container-fluid">
+		<div class="container-fluid" id="bgcontainer2">
 			<div class="row">
 			  <div class="col-md-6">
-			  	
+			  	<p class="text1"><strong><b>"</b></strong><i> Come, and see the victories of the cross. Christ’s wounds are thy healings, His agonies thy repose, His conflicts thy conquests, His groans thy songs, His pains thine ease, His shame thy glory, His death thy life, His sufferings thy salvation</i>.<strong><b>"</b></strong></p>
 			  </div >
-			  <div class="col-md-3">
-			  	<p>GNU GENERAL PUBLIC LICENSE
-Version 3, 29 June 2007
-
-Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
-Everyone is permitted to copy and distribute verbatim copies
-of this license document, but changing it is not allowed.
-
-Preamble
-
-The GNU General Public License is a free, copyleft license for
-software and other kinds of works.
-
-The licenses for most software and other practical works are designed
-to take away your freedom to share and change the works. By contrast,
-the GNU General Public License is intended to guarantee your freedom to
-share and change all versions of a program--to make sure it remains free
-software for all its users. We, the Free Software Foundation, use the
-GNU General Public License for most of our software; it applies also to
-any other work released this way by its authors. You can apply it to
-your programs, too.
-
-
-</p>
-</div>
+			  <div class="col-md-3"><br>
+			  	<img src="img/img5.jpg">
+			</div>
 			<div class="col-md-3">
-						  	<p>GNU GENERAL PUBLIC LICENSE
-Version 3, 29 June 2007
-
-Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
-Everyone is permitted to copy and distribute verbatim copies
-of this license document, but changing it is not allowed.
-
-Preamble
-
-The GNU General Public License is a free, copyleft license for
-software and other kinds of works.
-
-The licenses for most software and other practical works are designed
-to take away your freedom to share and change the works. By contrast,
-the GNU General Public License is intended to guarantee your freedom to
-share and change all versions of a program--to make sure it remains free
-software for all its users. We, the Free Software Foundation, use the
-GNU General Public License for most of our software; it applies also to
-any other work released this way by its authors. You can apply it to
-your programs, too.
-
-</p>
+				<p class="text2"><strong><b>"</b></strong><i> Devant le mal et la souffrance, Dieu se tait. Il n'intervient pas. On le croit mort. Silence de Dieu provoquant les plus angoissantes questions de l'homme. Face à ce silence bouleversant, il ne reste que l'adoration muette d'un coeur de chair qui ne comprend pas.</i><strong><b>"</b></strong></p><br><br>Daniel-Ange.
 			
 			</div>
 			  </div >
