--- a/home.html
+++ b/home.html
@@ -92,6 +92,7 @@
 			  </div>
 			</div >
 		</div >
+		<footer><i>Jesus is still the same...</i></footer>
 
 
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
