--- a/home_french.html
+++ b/home_french.html
@@ -79,7 +79,7 @@
 							Education: University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div>
+						</div><br>
 					</div>
 					</div>
 
@@ -101,7 +101,7 @@
 							Education: University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div>
+						</div><br>
 					</div>
 					</div>
 
@@ -124,7 +124,7 @@
 							Education: University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div>
+						</div><br>
 					</div>
 					</div>
 
