--- a/home_english.html
+++ b/home_english.html
@@ -78,7 +78,7 @@
 							Education: University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div>
+						</div><br>
 					</div>
 					</div>
 
@@ -100,7 +100,7 @@
 							Education: University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div>
+						</div><br>
 					</div>
 					</div>
 
@@ -123,7 +123,7 @@
 							Education: University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div>
+						</div><br>
 					</div>
 					</div>
 
