--- a/home_french.html
+++ b/home_french.html
@@ -56,8 +56,8 @@
 				<img src="img/flw6.png" width="25px" height="25px">
 			</marquee>
 			<div class="jumbotron">
-				<center><h1>Boost Your Christian Life here...</h1>
-				<h3><b><i>Meet some of valiant men of God who are</i></b></h3><h3><b><i>only focus on Jesus and help the worldwide</i></b></h3><h3><b><i>church to be ready for the return</i></b></h3> <h3><b><i>of Jesus Christ The Savior of the world.</i></b></h3>
+				<center><h1>Boost Ta vie Chretienne ici...</h1>
+				<h3><b><i>Rencontre quelques hommes de Dieu qui sont</i></b></h3><h3><b><i>uniquement centrer sur Jesus et qui aide</i></b></h3><h3><b><i>l'eglise a s'appreter pour le retour</i></b></h3> <h3><b><i>dec Jesus Christ le Sauveur du monde.</i></b></h3>
 				</center>
 			</div>
 			<div class="container-fluid" id="cont1">
