--- a/home_french.html
+++ b/home_french.html
@@ -57,7 +57,7 @@
 			</marquee>
 			<div class="jumbotron">
 				<center><h1>Boost Ta vie Chretienne ici...</h1>
-				<h3><b><i>Rencontre quelques hommes de Dieu qui sont</i></b></h3><h3><b><i>uniquement centrer sur Jesus et qui aide</i></b></h3><h3><b><i>l'eglise a s'appreter pour le retour</i></b></h3> <h3><b><i>dec Jesus Christ le Sauveur du monde.</i></b></h3>
+				<h3><b><i>Rencontre quelques hommes de Dieu qui sont</i></b></h3><h3><b><i>uniquement centrer sur Jesus et qui aide</i></b></h3><h3><b><i>l'eglise a s'appreter pour le retour</i></b></h3> <h3><b><i>de Jesus Christ le Sauveur du monde.</i></b></h3>
 				</center>
 			</div>
 			<div class="container-fluid" id="cont1">
