--- a/home_french.html
+++ b/home_french.html
@@ -57,7 +57,7 @@
 			</marquee>
 			<div class="jumbotron">
 				<center><h1>Boost Ta vie Chretienne ici...</h1>
-				<h3><b><i>Rencontre quelques hommes de Dieu qui sont</i></b></h3><h3><b><i>uniquement centrer sur Jesus et qui aide</i></b></h3><h3><b><i>l'eglise a s'appreter pour le retour</i></b></h3> <h3><b><i>de Jesus Christ le Sauveur du monde.</i></b></h3>
+				<h3><b><i>Rencontre quelques homes de Dieu qui sont</i></b></h3><h3><b><i>uniquement centrer sur Jesus et qui aide</i></b></h3><h3><b><i>l'eglise a s'appreter pour le retour</i></b></h3> <h3><b><i>de Jesus Christ le Sauveur du monde.</i></b></h3>
 				</center>
 			</div>
 			<div class="container-fluid" id="cont1">
@@ -68,63 +68,59 @@
 						width="345px" height="150px">
 						<div class="card-body">
 							<h4 class="card-title">
-							Evangelist Dag Heward-M.
+							Georges Olivier MBAZABOUA
 							</h4>
 							<p class="card-text">
-							Dag Heward-Mills is an African Evangelist, pastor, author andconference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.
-							Born: May 14, 1963 (age 56 years), London, United Kingdom
-							Nationality: Ghanaian
-							Spouse: Adelaide Mills (m. 1990)
-							Children: Joshua Mills, Paula Mills, Daniella Mills, David Mills
-							Education: University of Ghana, University of Ghana Medical School, Achimota School.
+								Georges Olivier MBAZABOUA est un Africain pasteur evangeliste charismatique fondateur et president du Ministere de la Veritee Pour une Liberte Reel, fondee au Gabon en 2009 et ayant plusieur branches dans le monde.
+								<b>Nee: --/--/-- au Gabon</b><br> 
+								<b>Education: -------------</b><br>
+								<b>Epouse: Aghate Mbazaboua</b><br>
+								<b>Enfants: Nikao, Phanerosis,....</b><br>
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div><br>
+						</div>
 					</div>
 					</div>
 
 
 
 					<div class="col-md-4">
-						<div class="card" style="height: 520px">
+						<div class="card">
 						<img src="img/mamadou.jpg" class="card-img-top" alt="Bishop Dag Heward M." width="345px" height="150px">
 						<div class="card-body">
 							<h4 class="card-title">
 							Evangelist Dag Heward-M.
 							</h4>
 							<p class="card-text">
-							Dag Heward-Mills is an African Evangelist, pastor, author andconference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.
-							Born: May 14, 1963 (age 56 years), London, United Kingdom
-							Nationality: Ghanaian
-							Spouse: Adelaide Mills (m. 1990)
-							Children: Joshua Mills, Paula Mills, Daniella Mills, David Mills
-							Education: University of Ghana, University of Ghana Medical School, Achimota School.
+							Mamadou Philippe Karambiri est un Burkinabè pasteur evangeliste charismatique. Ils est le president de International Evangelism Center - African Interior Mission qu'il a fonde en 1987.
+							<b>Nee:</b> 7 Mars, 1947, Tougan, Burkina Faso<br>
+							<b>Education:</b> Universite de Toulouse<br>
+							<b>Epouse:</b> Hortense Palm<br>
+							<b>Enfants:</b> Sarah, Samuel, Anne Daniella and David<br>
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div><br>
+						</div>
 					</div>
 					</div>
 
 
 
 					<div class="col-md-4">
-						<div class="card" style="height: 520px">
+						<div class="card">
 						<img src="img/yvan.jpg" class="card-img-top" alt="Bishop Dag Heward M."
 						width="345px" height="150px" >
 						<div class="card-body">
 							<h4 class="card-title">
-							Evangelist Dag Heward-M.
+							Yves Castanou
 							</h4>
 							<p class="card-text">
-							Dag Heward-Mills is an African Evangelist, pastor, author andconference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.
-							Born: May 14, 1963 (age 56 years), London, United Kingdom
-							Nationality: Ghanaian
-							Spouse: Adelaide Mills (m. 1990)
-							Children: Joshua Mills, Paula Mills, Daniella Mills, David Mills
-							Education: University of Ghana, University of Ghana Medical School, Achimota School.
+							Yves Castanou est un pasteur evangeliste charismatique de Impact Christian center Brazzaville et Directeur generale de Agence de régulation des postes et des communications électroniques en Republic du Congo.<br>
+							<b>Nee:</b> 22 Juin, 1971, Reims, France<br>
+							<b>Education:</b> Polytechnique Montréal<br>
+							<b>Epouse:</b> Habi Castanou
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div><br>
+						</div>
 					</div>
 					</div>
 
