--- a/home_english.html
+++ b/home_english.html
@@ -70,62 +70,60 @@
 							Evangelist Dag Heward-M.
 							</h4>
 							<p class="card-text">
-							Dag Heward-Mills is an African Evangelist, pastor, author andconference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.
-							Born: May 14, 1963 (age 56 years), London, United Kingdom
-							Nationality: Ghanaian
-							Spouse: Adelaide Mills (m. 1990)
-							Children: Joshua Mills, Paula Mills, Daniella Mills, David Mills
-							Education: University of Ghana, University of Ghana Medical School, Achimota School.
+							Dag Heward-Mills is an African Evangelist, pastor, author and conference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.<br>
+							<b>Born:</b> May 14, 1963 (age 56 years), London, United Kingdom<br>
+							<b>Nationality:</b> Ghanaian<br>
+							<b>Spouse:</b> Adelaide Mills (m. 1990)<br>
+							<b>Children:</b> Joshua Mills, Paula Mills, Daniella Mills, David Mills<br>
+							<b>Education:</b> University of Ghana, University of Ghana Medical School, Achimota School.
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div><br>
+						</div>
 					</div>
 					</div>
 
 
 
 					<div class="col-md-4">
-						<div class="card" style="height: 520px">
+						<div class="card">
 						<img src="img/oyedepo.jpg" class="card-img-top" alt="Bishop Dag Heward M." width="345px" height="150px">
 						<div class="card-body">
 							<h4 class="card-title">
-							Evangelist Dag Heward-M.
+							David Oyedepo
 							</h4>
 							<p class="card-text">
-							Dag Heward-Mills is an African Evangelist, pastor, author andconference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.
-							Born: May 14, 1963 (age 56 years), London, United Kingdom
-							Nationality: Ghanaian
-							Spouse: Adelaide Mills (m. 1990)
-							Children: Joshua Mills, Paula Mills, Daniella Mills, David Mills
-							Education: University of Ghana, University of Ghana Medical School, Achimota School.
+							David O. Oyedepo is a Nigerian preacher, Christian author, businessman, architect and the founder and presiding Bishop of the megachurch Faith Tabernacle in Ota, Ogun State, Nigeria, and Living Faith Church Worldwide, also known as Winners' Chapel International.
+							<b>Born:</b> September 27, 1954, Osogbo, Nigeria<br>
+							<b>Spouse:</b> Faith Abiola Oyedepo (m. 1982)<br>
+							<b>Children:</b> Isaac Oyedepo, Love Oyedepo, David Oyedepo Jnr., Joyce Oyedepo<br>
+							<b>Education:</b> Honolulu University, Kwara State University, Malete, AIT CAFE<br>
 							</p>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div><br>
+						</div>
 					</div>
 					</div>
 
 
 
 					<div class="col-md-4">
-						<div class="card" style="height: 520px">
+						<div class="card">
 						<img src="img/christ.jpg" class="card-img-top" alt="Bishop Dag Heward M."
 						width="345px" height="150px" >
 						<div class="card-body">
 							<h4 class="card-title">
-							Evangelist Dag Heward-M.
+							Chris Oyakhilome
 							</h4>
 							<p class="card-text">
-							Dag Heward-Mills is an African Evangelist, pastor, author andconference speaker based in Accra, Ghana. He is the founder and presiding Bishop of the United Denomination Originating from the Lighthouse Group Of Churches.
-							Born: May 14, 1963 (age 56 years), London, United Kingdom
-							Nationality: Ghanaian
-							Spouse: Adelaide Mills (m. 1990)
-							Children: Joshua Mills, Paula Mills, Daniella Mills, David Mills
-							Education: University of Ghana, University of Ghana Medical School, Achimota School.
-							</p>
+							Chris Oyakhilome is the founder and president of LoveWorld Incorporated, also known as Christ Embassy, based in Lagos, Nigeria.<br>
+							<b>Born:</b> December 7, 1963 (age 56 years), Edo, Nigeria<br>
+							<b>Spouse:</b> Anita Oyakhilome (m. 1991–2016)<br>
+							<b>Education:</b> Ambrose Alli University<br>
+							<b>Children:</b> Sharon Oyakhilome, Charlyn Oyakhilome         <br>
+							</p><br><br><br><br>
 							<center><a href="#" class="btn btn-primary">more...</a></center>
-						</div><br>
+						</div>
 					</div>
-					</div>
+					</div><br>
 
 
 
